# xsens

./: CMakeLists.txt  LICENSE  README.md  mainpage.dox  manifest.xml
include/xsens_driver/: xsens_driver.h
include/xsens_node/: xsens.h
src/xsens/srv/: _Calibrate.py
src/xsens_api/: cmt1.cpp  cmt2.cpp  cmt3.cpp  cmtmessage.cpp  cmtpacket.cpp  cmtscan.cpp  xsens_exception.cpp  xsens_std.cpp  xsens_time.cpp
src/xsens_driver/: xsens_driver.cpp
src/xsens_node/: xsens.cpp  xsens_node.cpp
srv/: Calibrate.srv
srv_gen/cpp/include/xsens/: Calibrate.h
srv_gen/lisp/: Calibrate.lisp  _package.lisp  _package_Calibrate.lisp  xsens-srv.asd
